# zhconv-rs

./: .deepsource.toml  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.cloudflare/: setup-pages-env.sh
.github/workflows/: main.yml  npm.yml  pyo3.yml  pyo3.yml.deprecated  release.yml  worker.yml
bench-compare/: Cargo.toml  README.md
bench-compare/benches/: compare_benchmark.rs
benches/: LICENSE.md  base_benchmark.rs  compare_benchmark.rs  data3185k.txt  data54k.txt  data689k.txt  wikitext.txt  zhconv_benchmark.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
data/: .gitignore  README.md  cgroup_extractor.py  merge_cgroups_for_web.py  pyproject.toml  update_basic.py  update_cgroups.py
data-extractor/: cgroup_extractor.py
data-extractor/cgroups/: 2020年太平洋颱風季.json  2021年太平洋颱風季.json  AT Places.json  Avatar.json  BUDDYCOMPLEX.json  Bridge.json  Butterfly.json  CH Places.json  COD.json  CodeLyoko.json  Coldplay.json  Composer.json  Copyright.json  DE Places.json  Disney.json  Doraemon.json  ED.json  EPL.json  EU.json  Earthquake.json  Ecology.json  Electronics.json  F1.json  FAcup.json  FR Places.json  Football.json  GZFC.json  Geography.json  Getter Robo.json  Glee.json  GundamSeed.json  GundamW.json  Hannibal Lecter.json  Hayate the Combat Butler.json  Heroes of the Storm.json  JLeague.json  Justin Bieber.json  KLeague.json  KO Show.json  KO TV Show.json  (+82 more)
data/cgroups/: 1D.json  2014年世界杯决赛.json  2016年太平洋颱風季.json  2017年太平洋颱風季.json  2018年太平洋颱風季.json  2019年太平洋颱風季.json  2020年太平洋颱風季.json  2021年太平洋颱風季.json  2022年太平洋颱風季.json  2023年太平洋颱風季.json  2024年太平洋颱風季.json  2025年太平洋颱風季.json  24.json  A Pink.json  A Song of Ice and Fire.json  AC Milan.json  ACmilan.json  ALeague.json  AT Places.json  AU Places.json  Adventure Time.json  Aero.json  Aikatsu.json  Anime.json  Apink.json  Apple.json  Aquarion.json  Aquatics.json  Ariana Grande.json  Arsenal footballer.json  Artist.json  Astronomy.json  Avatar.json  Avril Lavigne.json  BE Places.json  BLEACH.json  BR Places.json  BUDDYCOMPLEX.json  Babel category.json  Badminton.json  (+413 more)
npm-cli/: README.md  package-opencc.json.tmpl  package.json  package.json.tmpl
pyo3/: Cargo.toml  pyproject-opencc.toml  pyproject.toml  ttt.txt  zhconv_rs.pyi
pyo3/src/: lib.rs  utils.rs
src/: cgroup.rs  converter.rs  converters.rs  convs.rs  lib.rs  main.rs  pagerules.rs  pdf.rs  rule.rs  tables.rs  utils.rs  variant.rs  wasm.rs
typst/: .gitignore  Cargo.toml  README.md  example.typ  typst.toml
typst/src/: lib.rs
web/: .gitignore  README.md  bench.tmp  config-overrides.js  eslint.config.mts  index.html  package.json  vite.config.ts
web/public/: cgroups.json  index.html  manifest.json
web/src/: App.test.tsx  App.tsx  AppContext.tsx  WasmContext.tsx  index.tsx  reportWebVitals.ts  setupTests.ts  theme.ts  utils.ts
web/src/components/: AboutDialog.tsx  CGroupCheckbox.tsx  CGroupSelect.tsx  ConvertButton.tsx  Footer.tsx  Header.tsx  InputEditor.tsx  OpenCCSwitch.tsx  OptionsControl.tsx  OutputEditor.tsx  OutputStatusLine.tsx  RulesetSelector.tsx  WarningFab.tsx  editorCommon.tsx
worker/: .gitignore  Cargo.toml  doc.txt  wrangler.toml
worker/src/: lib.rs  utils.rs
