[workspace]
members = ["pyo3", "worker"]

[workspace.package]
authors = ["Hung-I Wang <whygowe@gmail.com>"]
categories = ["text-processing", "localization", "value-formatting", "wasm", "command-line-utilities"]
description = "Traditional, Simplified and regional Chinese variants converter powered by MediaWiki & OpenCC rulesets and the Aho-Corasick algorithm 中文简繁及地區詞轉換"
edition = "2021"
# license (excluding bundled conversion tables) = "MIT OR Apache-2.0"
license = "GPL-2.0-or-later"
repository = "https://github.com/Gowee/zhconv-rs"
version = "0.4.1-1"

[workspace.lints]

[package]
name = "zhconv"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zhconv"
path = "src/main.rs"
required-features = ["bin-build"]

[features]
default = ["compress", "mediawiki"]

# Conversion tables for each target variant, sourced from MediaWiki (GPLv2.0+)
# (recommended for general use if GPL is acceptable)
mediawiki = ["mediawiki-hans", "mediawiki-hant", "mediawiki-cn", "mediawiki-tw", "mediawiki-hk"]
mediawiki-hans = ["_mediawiki-base"]
mediawiki-hant = ["_mediawiki-base"]
mediawiki-cn = ["_mediawiki-base"]
mediawiki-tw = ["_mediawiki-base"]
mediawiki-hk = ["_mediawiki-base"]
_mediawiki-base = []

# Conversion tables for each target variant, derived from OpenCC (Apache-2.0)
# (larger binary size)
opencc = ["opencc-hans", "opencc-hant", "opencc-cn", "opencc-tw", "opencc-hk"]
opencc-hans = ["_opencc-base"]
opencc-hant = ["_opencc-base"]
opencc-cn = ["_opencc-base"]
opencc-tw = ["_opencc-base"]
opencc-hk = ["_opencc-base"]
_opencc-base = []
# Use OpenCC's TWPhrases dicts when applicable (like in s2twp and tw2sp config), which appears to
# be too aggressive for general use.
opencc-twp = []

# Compress bundled prebuilt automata with zstd
# (recommended, since the decompression overhead during initialization is negligible, considering
# the I/O savings)
compress = ["zstd", "ruzstd"]

wasm = []

bin-build = ["structopt", "anyhow", "tempfile"]
bench = []

[dependencies]
daachorse = "1.0"
itertools = "0.14"
once_cell = "1.21"
regex = "1.12"
ruzstd = { version = "0.8", optional = true }
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
# for the binary
structopt = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
tempfile = { version = "3.23", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1" } #, default-features = true, optional = true}

# # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# # compared to the default allocator's ~10K. It is slower than the default
# # allocator, however.
# #
# # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = {version = "0.4", default-features = true, optional = true}

[dev-dependencies]
criterion = "0.7"
wasm-bindgen-test = "0.3"

[build-dependencies]
daachorse = "1.0"
hex-literal = "1.1"
itertools = "0.14"
once_cell = "1.8"
regex = "1.5"
sha2 = "0.10"
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }
zstd = { version = "0.13", optional = true }

[[bench]]
harness = false
name = "base_benchmark"
required-features = ["bench"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Fix for wasm-pack wasm-opt validation failure with Rust >= 1.87 (LLVM emits
# bulk-memory ops without setting the feature flag).
# See: https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

# The worker cdylib must NOT be stripped at LLD link time. The LLD
# --strip-debug pass drops the wasm `target_features` custom section,
# which wasm-bindgen 0.2.126 reads to detect reference-types for its
# externref catch-wrapper transform. Stripping is done by wasm-opt
# downstream instead. Per-crate override of a workspace profile field
# is only supported via the [profile.<name>.package.<name>] form —
# a member crate's own [profile.*] section is ignored when the
# workspace has a matching one (cargo only warns, doesn't fail).
# See: https://github.com/cloudflare/workers-rs/issues/1014
[profile.release.package.zhconv-worker]
strip = false
