[package]
name = "zhconv-bench-compare"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Comparative benchmarks for zhconv-rs against other Chinese converters (requires OpenCC C library ≤ 1.2)"
publish = false

[dev-dependencies]
criterion = "0.7"
ferrous-opencc = "0.3"
opencc-rust = "1.1"
fast2s = "0.3"
opencc-fmmseg = "0.8"

[dependencies]
zhconv = { path = ".." }

[[bench]]
harness = false
name = "compare_benchmark"