[package]
name = "zhconv-cli"
version = "0.2.0-beta"
edition = "2021"
authors = ["Hung-I Wang <whygowe@gmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/Gowee/zhconv-rs"
description = "Convert Traditional/Simplified Chinese and regional words of Taiwan/Hong Kong/mainland China/Singapore based on Wikipedia conversion tables \n轉換中文簡體、繁體及兩岸、新馬地區詞，基於中文維基轉換表"
categories = ["text-processing", "localization", "value-formatting"]

[[bin]]
name = "zhconv"
path = "src/main.rs"

[dependencies]
zhconv = { version = "0.2.0-beta", path = "../" }
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
tempfile = "3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
