[package]
name = "zhconv-cli"
version = "0.3.2"
edition = "2021"
authors = ["Hung-I Wang <whygowe@gmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/Gowee/zhconv-rs"
description = "Convert Traditional/Simplified Chinese and regional words of Taiwan/Hong Kong/mainland China/Singapore based on Wikipedia and OpenCC rulesets\n轉換中文簡體、繁體及兩岸、新馬地區詞，基於維基百科和OpenCC規則集"
categories = ["text-processing", "localization", "value-formatting"]

[[bin]]
name = "zhconv"
path = "src/main.rs"

[dependencies]
zhconv = { version = "0.3.2", path = "../", features = ["opencc"] }
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.14"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
