[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "zhconv-rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Chinese (Simplified)",
]

[project.urls]
# Homepage = "https://github.com/Gowee/zhconv-rs"
Source = "https://github.com/Gowee/zhconv-rs/tree/main/pyo3"
# Tracker = "https://github.com/Gowee/zhconv-rs/issues"
