[package]
name = "zhconv-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Hung-I Wang <whygowe@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
opencc = ["zhconv/opencc"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5", features=['http', 'axum'] }
worker-macros = { version="0.5", features=['http'] }
axum  = { version = "0.8", default-features = false, features=["query"] }
axum-extra = { version = "0.10", default-features = false, features=["typed-header", "erased-json"]}
serde = "1.0"
headers = "0.4"
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
zhconv = { path = "../", features=["serde"] }
