[package]
name = "zhconv-worker"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["zhconv/compress", "zhconv/mediawiki"]
mediawiki = ["zhconv/mediawiki"]
opencc = ["zhconv/opencc"]
mediawiki-hans = ["zhconv/mediawiki-hans"]
mediawiki-hant = ["zhconv/mediawiki-hant"]
mediawiki-cn = ["zhconv/mediawiki-cn"]
mediawiki-tw = ["zhconv/mediawiki-tw"]
mediawiki-hk = ["zhconv/mediawiki-hk"]
opencc-hans = ["zhconv/opencc-hans"]
opencc-hant = ["zhconv/opencc-hant"]
opencc-cn = ["zhconv/opencc-cn"]
opencc-tw = ["zhconv/opencc-tw"]
opencc-hk = ["zhconv/opencc-hk"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.7", features=['http', 'axum'] }
worker-macros = { version="0.7", features=['http'] }
axum  = { version = "0.8", default-features = false, features=["query"] }
axum-extra = { version = "0.12", default-features = false, features=["typed-header", "erased-json"]}
serde = "1.0"
headers = "0.4"
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
zhconv = { path = "../", default-features = false, features=["serde"] }

[lints]
workspace = true
