[package]
name = "zhconv-worker"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false
# worker-build reads this section to populate its wasm-opt argument list,
# then appends --all-features --debuginfo. Without --enable-bulk-memory,
# Rust 1.87+ LLVM emits memory.copy/fill which wasm-opt then rejects
# (rust-lang/rust#141048).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals"]

[features]
# Mirror zhconv's own [features] structure: top-level toggles (`compress`,
# `mediawiki`) that the source's `#[cfg]` checks against; mid-level leaves
# that the toggles activate; bottom-level aliases that propagate to the
# dep. `default` enables the two most common paths (compressed tables +
# mediawiki dicts); `opencc` is opt-in for the opencc-flavoured build
# (maturin `-F opencc` for pyo3; manual `cargo --features opencc` for worker).
default = ["compress", "mediawiki"]
compress = ["zhconv/compress"]
mediawiki = ["mediawiki-hans", "mediawiki-hant", "mediawiki-cn", "mediawiki-tw", "mediawiki-hk"]
opencc = ["opencc-hans", "opencc-hant", "opencc-cn", "opencc-tw", "opencc-hk"]
mediawiki-hans = ["zhconv/mediawiki-hans"]
mediawiki-hant = ["zhconv/mediawiki-hant"]
mediawiki-cn = ["zhconv/mediawiki-cn"]
mediawiki-tw = ["zhconv/mediawiki-tw"]
mediawiki-hk = ["zhconv/mediawiki-hk"]
opencc-hans = ["zhconv/opencc-hans"]
opencc-hant = ["zhconv/opencc-hant"]
opencc-cn = ["zhconv/opencc-cn"]
opencc-tw = ["zhconv/opencc-tw"]
opencc-hk = ["zhconv/opencc-hk"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.8", features=['http', 'axum'] }
worker-macros = { version="0.8", features=['http'] }
axum  = { version = "0.8", default-features = false, features=["query"] }
axum-extra = { version = "0.12", default-features = false, features=["typed-header", "erased-json"]}
serde = "1.0"
headers = "0.4"
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
zhconv = { path = "../", default-features = false, features=["serde"] }

[lints]
workspace = true
